log
Thu 07 Sep 2023 03:18:57 PM UTC: 
 tests:  0|6
total_score: 0/70
e93a407
Thu 07 Sep 2023 03:25:58 PM UTC: 
 hashmap.c | 8 ++++++++
 1 file changed, 8 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:49:15: error: expected ‘;’ before ‘}’ token
   49 |     return map
      |               ^
      |               ;
   50 | }
      | ~              
At top level:
hashmap.c:43:11: error: ‘createMap’ defined but not used [-Werror=unused-function]
   43 | HashMap * createMap(long capacity) {
      |           ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
0c9df1e
Thu 07 Sep 2023 03:26:33 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c:42:11: error: ‘createMap’ defined but not used [-Werror=unused-function]
   42 | HashMap * createMap(long capacity) {
      |           ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
10f0a66
Thu 07 Sep 2023 03:34:29 PM UTC: 
 hashmap.c | 30 +++++++++++++++++++++++-------
 1 file changed, 23 insertions(+), 7 deletions(-)
In file included from test.c:4:
hashmap.c:43:6: error: ‘insertMap’ defined but not used [-Werror=unused-function]
   43 | void insertMap(HashMap * map, char * key, void * value) {
      |      ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
78add91
Thu 07 Sep 2023 03:34:47 PM UTC: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:4:
hashmap.c:67:1: error: expected identifier or ‘(’ before ‘}’ token
   67 | }
      | ^
Compilation failed
bc6e35b
Thu 07 Sep 2023 03:34:59 PM UTC: 
 hashmap.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  4|5
total_score: 20/70
2709405
Thu 07 Sep 2023 03:42:56 PM UTC: 
 hashmap.c | 8 ++++++++
 1 file changed, 8 insertions(+)
In file included from test.c:4:
hashmap.c:68:11: error: ‘createMap’ defined but not used [-Werror=unused-function]
   68 | HashMap * createMap(long capacity) {
      |           ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
2c4d086
Thu 07 Sep 2023 04:00:59 PM UTC: 
 hashmap.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:4:
hashmap.c:80:1: error: expected identifier or ‘(’ before ‘}’ token
   80 | }
      | ^
hashmap.c:83:11: error: redefinition of ‘createMap’
   83 | HashMap * createMap(long capacity) {
      |           ^~~~~~~~~
hashmap.c:70:13: note: previous definition of ‘createMap’ with type ‘HashMap *(long int)’ {aka ‘struct HashMap *(long int)’}
   70 |   HashMap * createMap(long capacity) {
      |             ^~~~~~~~~
Compilation failed
e249f33
Thu 07 Sep 2023 04:04:37 PM UTC: 
 hashmap.c | 6 ------
 1 file changed, 6 deletions(-)
 tests:  5|4
total_score: 30/70
1ab717f
Thu 07 Sep 2023 10:20:22 PM UTC: 
 hashmap.c | 14 ++++++++++++--
 1 file changed, 12 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:91:21: error: statement with no effect [-Werror=unused-value]
   91 |     map->buckets[i] == NULL) return NULL;
      |                     ^
hashmap.c:91:28: error: expected ‘;’ before ‘)’ token
   91 |     map->buckets[i] == NULL) return NULL;
      |                            ^
hashmap.c:91:28: error: expected statement before ‘)’ token
cc1: all warnings being treated as errors
Compilation failed
0ba249f
Thu 07 Sep 2023 10:20:47 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:91:21: error: statement with no effect [-Werror=unused-value]
   91 |     map->buckets[i] == NULL) return NULL;
      |                     ^
hashmap.c:91:28: error: expected ‘;’ before ‘)’ token
   91 |     map->buckets[i] == NULL) return NULL;
      |                            ^
hashmap.c:91:28: error: expected statement before ‘)’ token
hashmap.c:93:10: error: expected ‘(’ before ‘map’
   93 |       if map-> current= i;
      |          ^~~
      |          (
cc1: all warnings being treated as errors
Compilation failed
a708e5b
Thu 07 Sep 2023 10:22:13 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:91:8: error: expected ‘(’ before ‘map’
   91 |     if map->buckets[i] == NULL) return NULL;
      |        ^~~
      |        (
hashmap.c:91:20: error: statement with no effect [-Werror=unused-value]
   91 |     if map->buckets[i] == NULL) return NULL;
      |        ~~~~~~~~~~~~^~~
hashmap.c:91:5: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
   91 |     if map->buckets[i] == NULL) return NULL;
      |     ^~
hashmap.c:91:31: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
   91 |     if map->buckets[i] == NULL) return NULL;
      |                               ^
hashmap.c:91:31: error: expected statement before ‘)’ token
cc1: all warnings being treated as errors
Compilation failed
434e781
